# docsoup

./: .gitignore  README.md  pyproject.toml
.pi/skills/docsoup/: SKILL.md
src/docsoup/: __init__.py  cli.py  models.py
src/docsoup/discovery/: __init__.py  base.py  node.py  python.py
src/docsoup/indexing/: __init__.py  base.py  sqlite_index.py
src/docsoup/parsing/: __init__.py  base.py  javascript.py  python.py  typescript.py
src/docsoup/search/: __init__.py  engine.py
tests/: test_cli.py  test_discovery_node.py  test_discovery_python.py  test_indexing_sqlite.py  test_models.py  test_parsing_javascript.py  test_parsing_python.py  test_parsing_typescript.py  test_search_engine.py
tests/fixtures/dts/: ambient.d.ts  barrel.d.ts  declarations.d.ts  simple.d.ts  utils.d.ts
tests/fixtures/js/: commonjs.js  esm.js
tests/fixtures/node_project/: package.json
tests/fixtures/py/: simple.py  stub.pyi  with_all.py
tests/fixtures/python_project/: pyproject.toml  requirements.txt
