[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docsoup"
version = "0.1.0"
description = "Code knowledge-base search tool for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
]

[project.scripts]
docsoup = "docsoup.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docsoup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/docsoup"]
